--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-validator-jsonschema": "^3.1.0",
     "cors": "^2.8.5",
     "cron-decorators": "^0.1.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
     "event-dispatch": "^0.4.1",
     "express": "^4.17.1",
@@ -64,7 +65,7 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "dev": "NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/main.ts",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/nodemon --exec './node_modules/.bin/ts-node' src/main.ts",
     "start": "npm run build && NODE_ENV=production node ./dist/main.js",
     "build": "tsc",
     "typeorm": "ts-node -r ./fix-module-alias.js ./node_modules/.bin/typeorm",
